deployment/master.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: flux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux-prod
  labels:
    app: flux-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flux
  template:
    metadata:
      labels:
        app: flux
        version: prod
    spec:
      containers:
      - name: flux
        image: gcr.io/canary-k8-deployment-21-06-19/fluxrelease/demo-release-repo:imagetag
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
