deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: http
  selector:
    app: flux
